# property-based-testing-stateful-systems

./: CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  property-based-testing-stateful-systems.cabal  shell.nix
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: release.yaml
app/: Main.hs
docs/: Part01SMTesting.md  Part02ConcurrentSMTesting.md  Part03SMContractTesting.md  Part04FaultInjection.md  Part05SimulationTesting.md
images/: part5-simulation-event-loop.excalidraw
src/: Part01SMTesting.lhs  Part02ConcurrentSMTesting.lhs  Part03SMContractTesting.lhs  Part04FaultInjection.lhs  Part05SimulationTesting.lhs
src/Part03/: Service.hs  ServiceTest.hs
src/Part04/: LineariseWithFault.hs
src/Part05/: Agenda.hs  AwaitingClients.hs  ClientGenerator.hs  Codec.hs  Configuration.hs  Debug.hs  Deployment.hs  ErrorReporter.hs  Event.hs  EventLoop.hs  EventQueue.hs  History.hs  LibMain.hs  Network.hs  Options.hs  Random.hs  StateMachine.hs  StateMachineDSL.hs  Time.hs  TimerWheel.hs
src/Part05/ViewstampReplication/: Machine.hs  Message.hs  State.hs
src/Part05/ViewstampReplication/Test/: ClientGenerator.hs  Model.hs
test/: PartTest.hs
tools/: generate_changelog.hs
