cabal-version:      2.4
name:               property-based-testing-stateful-systems
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Stevan Andjelkovic and Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  build-depends:    base ==4.15.1.0
  hs-source-dirs:   src

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , bytestring
    , containers
    , directory
    , stm
    , text
    , time
    , transformers
    , unix

  -- Other dependencies:
  build-depends:
    , aeson
    , async
    , heaps
    , http-client
    , http-types
    , HUnit
    , microlens-platform
    , QuickCheck
    , random
    , sqlite-simple
    , tree-diff           ==0.0.2.1
    , vector
    , wai
    , warp

  exposed-modules:
    Part01SMTesting
    Part02ConcurrentSMTesting
    Part03.Queue
    Part03.QueueInterface
    Part03.QueueTest
    Part03.Service
    Part03.ServiceTest
    Part03SMContractTesting
    Part04.CRC32
    Part04.FSFI
    Part04.LineariseWithFault
    Part04FaultInjection
    Part05.Agenda
    Part05.AwaitingClients
    Part05.ClientGenerator
    Part05.Codec
    Part05.Configuration
    Part05.Debug
    Part05.Deployment
    Part05.ErrorReporter
    Part05.Event
    Part05.EventLoop
    Part05.EventQueue
    Part05.History
    Part05.Network
    Part05.Options
    Part05.Random
    Part05.StateMachine
    Part05.StateMachineDSL
    Part05.Time
    Part05.TimerWheel
    Part05.ViewstampReplication.Machine
    Part05.ViewstampReplication.Message
    Part05.ViewstampReplication.State
    Part05.ViewstampReplication.Test.ClientGenerator
    Part05.ViewstampReplication.Test.Model
    Part05SimulationTesting

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -Wmissing-export-lists
    -Wpartial-fields -Wmissing-deriving-strategies -fhide-source-paths
    -Wunused-packages

  if impl(ghc >=9.0)
    ghc-options:
      -Winvalid-haddock -Wunicode-bidirectional-format-characters
      -Werror=unicode-bidirectional-format-characters

  if impl(ghc >=9.2)
    ghc-options:
      -Wredundant-bang-patterns -Woperator-whitespace -Wimplicit-lift

  if impl(ghc >=9.4)
    ghc-options: -Wredundant-strictness-flags

executable part5
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , property-based-testing-stateful-systems

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts

test-suite test
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:
    Driver
    PartTest

  build-depends:
    , base
    , property-based-testing-stateful-systems
    , tasty
    , tasty-hunit

  build-tool-depends: tasty-discover:tasty-discover
  type:               exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
